// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary component with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling: 
    $434.30
  </h1>
</div>
`;

exports[`should render correctly ExpensesSummary component with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    2
     
    expenses
     totalling: 
    $30.00
  </h1>
</div>
`;
